Lv 6. 최근 채팅 조회 API 구현 (#7)
fix: 최근 채팅 조회 API 구현 및 요청 처리 로직 수정